--- a/styles.css
+++ b/styles.css
@@ -109,7 +109,7 @@ button {
 
 @media (max-width: 900px) {
   body {
-    margin: 2rem 2.15rem;
+    margin: 2rem 2.3rem;
     background: url(./images/bg-mobile.svg) no-repeat fixed, var(--violet);
     background-size: 100%;
   }
@@ -119,7 +119,8 @@ button {
   }
 
   .landing__content {
-    margin: 3.4rem 0.2rem 0;
+    max-width: 500px;
+    margin: 3.4rem auto 0;
     display: flex;
     flex-direction: column;
     gap: 16px;
@@ -128,7 +129,7 @@ button {
   .content__right {
     text-align: center;
   }
-  
+
   .text__header {
     margin-bottom: 14px;
     font-size: 24px;
